--- a/docs/cereja_example.ipynb
+++ b/docs/cereja_example.ipynb
@@ -6,7 +6,6 @@
       "name": "cereja_example.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,21 +39,24 @@
       "metadata": {
         "id": "B1qNEuxZwVs_",
         "colab_type": "code",
+        "outputId": "480dee03-d555-4a60-f642-58ca50461b5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "7e3ec15b-3bd1-40f2-e272-c39cf18c7068"
+          "height": 85
+        }
       },
       "source": [
         "!pip install cereja"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: cereja in /usr/local/lib/python3.6/dist-packages (0.1.7)\n"
+            "Collecting cereja\n",
+            "  Downloading https://files.pythonhosted.org/packages/6f/b5/3aab34c98ec1d5886d9a28ddbe5f307ebc393eec1986fba5f4685c3aaace/cereja-0.1.9-py3-none-any.whl\n",
+            "Installing collected packages: cereja\n",
+            "Successfully installed cereja-0.1.9\n"
           ],
           "name": "stdout"
         }
@@ -98,19 +100,19 @@
       "metadata": {
         "id": "w_6TLC0DxI1f",
         "colab_type": "code",
+        "cellView": "both",
+        "outputId": "7088dbf1-2ead-435e-fcd4-a21a47628d33",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "cellView": "both",
-        "outputId": "f73e4728-f1a6-4165-820a-2f494174cab1"
+        }
       },
       "source": [
         "# is_iterable function return whether an object is iterable or not.\n",
         "my_var = [1,2,3] # change value and execute the cell\n",
         "cj.common.is_iterable(my_var)"
       ],
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -122,7 +124,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 4
         }
       ]
     },
@@ -131,16 +133,16 @@
       "metadata": {
         "id": "TXgvv3b2y1A9",
         "colab_type": "code",
+        "outputId": "dc483967-1f7c-4a23-a472-20c388b3093b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "29506e3a-ad7d-44c0-e50b-41a5f82ce7f5"
+        }
       },
       "source": [
         "# group_items_in_batches responsible for grouping items in batch taking into account the quantity of items per batch\n",
         "my_var = [1,2,3,4]\n",
-        "num_items_per_batch = 3\n",
+        "num_items_per_batch = 4\n",
         "result = cj.common.group_items_in_batches(items=my_var, items_per_batch=num_items_per_batch)\n",
         "print(f\"items per batch with leftovers: {result}\")\n",
         "\n",
@@ -148,20 +150,20 @@
         "Note that the last batch does not contain the same number as the previous batch,\n",
         "this is due to the split split. You can choose to fill this void as in the example below.\n",
         "\"\"\"\n",
-        "result = cj.common.group_items_in_batches(items=my_var, items_per_batch=3, fill=0)\n",
+        "result = cj.common.group_items_in_batches(items=my_var, items_per_batch=3, fill=\"arthur\")\n",
         "print(f\"fill values: {result}\")\n",
         "\n",
         "# Other examples\n",
         "result = cj.common.group_items_in_batches(items=['a','b','c','d'], items_per_batch=2)\n",
         "print(f\"Other examples: {result}\")"
       ],
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "items per batch with leftovers: [[1, 2, 3], [4]]\n",
-            "fill values: [[1, 2, 3], [4, 0, 0]]\n",
+            "items per batch with leftovers: [[1, 2, 3, 4]]\n",
+            "fill values: [[1, 2, 3], [4, 'arthur', 'arthur']]\n",
             "Other examples: [['a', 'b'], ['c', 'd']]\n"
           ],
           "name": "stdout"
@@ -173,11 +175,11 @@
       "metadata": {
         "id": "M9lJN5t8AMvs",
         "colab_type": "code",
+        "outputId": "2bd35a71-fa4c-4b23-aa90-df8e976bf71e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "c0d8bdfa-1b52-4677-e39d-ac855e4b96d7"
+        }
       },
       "source": [
         "# remove duplicate items in an item list or duplicate items list of list\n",
@@ -193,7 +195,7 @@
         "result = cj.common.remove_duplicate_items(my_var)\n",
         "print(f\"other example: {my_var} --> {result}\")"
       ],
-      "execution_count": 24,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,11 +223,11 @@
       "metadata": {
         "id": "8faV1ZV9BN1w",
         "colab_type": "code",
+        "outputId": "6955b672-7423-41c0-9a58-665940f1c68e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "e1834bd1-37df-449b-e4ce-3100ef0f0be5"
+        }
       },
       "source": [
         "# time_exec decorator used to signal or perform a particular function.\n",
@@ -235,13 +237,13 @@
         "\n",
         "my_function(\"Hi Cereja\")"
       ],
-      "execution_count": 32,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Hi Cereja\n",
-            "[my_function] performed 0.0011827945709228516\n"
+            "[my_function] performed 0.0018551349639892578\n"
           ],
           "name": "stdout"
         }
@@ -262,11 +264,11 @@
       "metadata": {
         "id": "qxpaAczOCxCn",
         "colab_type": "code",
+        "outputId": "56d94eaa-90b4-4a04-da4b-c8c5d81858a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "aad34396-a0d5-449c-c3a8-f1ac2566e84d"
+        }
       },
       "source": [
         "\"\"\"\n",
@@ -280,7 +282,7 @@
         "\n",
         "cj.path.group_path_from_dir(dir_path=my_dir, num_items_on_tuple=2, ext_file=my_ext_file)"
       ],
-      "execution_count": 39,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,7 +297,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 9
         }
       ]
     },
@@ -304,11 +306,11 @@
       "metadata": {
         "id": "qgiqJp8vEU-r",
         "colab_type": "code",
+        "outputId": "ac99678d-8da4-4645-ec8d-d515ac42f3b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "3aef5825-3f4c-4928-939f-48857bdae826"
+        }
       },
       "source": [
         "my_file_path = '/content/sample_data/california_housing_test.csv'\n",
@@ -319,7 +321,7 @@
         "result = cj.path.file_name(file_path=my_file_path, with_ext=True)\n",
         "print(f\"file_path: {my_file_path} --> {result}\")"
       ],
-      "execution_count": 41,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
