--- a/docs/cereja_example.ipynb
+++ b/docs/cereja_example.ipynb
@@ -6,6 +6,7 @@
       "name": "cereja_example.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +49,7 @@
       "source": [
         "!pip install cereja"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,6 +97,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2lxP-3C2tIZB",
+        "colab_type": "text"
+      },
+      "source": [
+        "###is_iterable\n",
+        "return whether an object is iterable or not."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "w_6TLC0DxI1f",
@@ -108,11 +120,10 @@
         }
       },
       "source": [
-        "# is_iterable function return whether an object is iterable or not.\n",
         "my_var = [1,2,3] # change value and execute the cell\n",
         "cj.common.is_iterable(my_var)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,42 +140,60 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ho09h5KStktn",
+        "colab_type": "text"
+      },
+      "source": [
+        "###group_items_in_batches\n",
+        "responsible for grouping items in batch taking into account the quantity of items per batch"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "TXgvv3b2y1A9",
         "colab_type": "code",
-        "outputId": "dc483967-1f7c-4a23-a472-20c388b3093b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        }
+        "colab": {}
       },
       "source": [
-        "# group_items_in_batches responsible for grouping items in batch taking into account the quantity of items per batch\n",
         "my_var = [1,2,3,4]\n",
         "num_items_per_batch = 4\n",
         "result = cj.common.group_items_in_batches(items=my_var, items_per_batch=num_items_per_batch)\n",
-        "print(f\"items per batch with leftovers: {result}\")\n",
-        "\n",
+        "print(f\"items per batch with leftovers: {result}\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YWvTGuECtwHj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6021f208-b338-443b-b01c-502ce179c708"
+      },
+      "source": [
         "\"\"\"\n",
         "Note that the last batch does not contain the same number as the previous batch,\n",
         "this is due to the split split. You can choose to fill this void as in the example below.\n",
         "\"\"\"\n",
-        "result = cj.common.group_items_in_batches(items=my_var, items_per_batch=3, fill=\"arthur\")\n",
-        "print(f\"fill values: {result}\")\n",
+        "my_var = [1,2,3,4]\n",
+        "num_items_per_batch = 4\n",
         "\n",
-        "# Other examples\n",
-        "result = cj.common.group_items_in_batches(items=['a','b','c','d'], items_per_batch=2)\n",
-        "print(f\"Other examples: {result}\")"
+        "result = cj.common.group_items_in_batches(items=my_var, items_per_batch=3, fill=\"cereja\")\n",
+        "print(f\"fill values: {result}\")"
       ],
-      "execution_count": 6,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "items per batch with leftovers: [[1, 2, 3, 4]]\n",
-            "fill values: [[1, 2, 3], [4, 'arthur', 'arthur']]\n",
-            "Other examples: [['a', 'b'], ['c', 'd']]\n"
+            "fill values: [[1, 2, 3], [4, 'cereja', 'cereja']]\n"
           ],
           "name": "stdout"
         }
@@ -173,40 +202,247 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M9lJN5t8AMvs",
+        "id": "PPVLm9VNt3wj",
         "colab_type": "code",
-        "outputId": "2bd35a71-fa4c-4b23-aa90-df8e976bf71e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
-        }
+          "height": 34
+        },
+        "outputId": "39dfa1b2-8077-4558-954f-8c37a3e5122a"
       },
       "source": [
-        "# remove duplicate items in an item list or duplicate items list of list\n",
-        "my_var = [1,2,3,4,4] #simple list\n",
-        "result = cj.common.remove_duplicate_items(my_var)\n",
-        "print(f\"simple list: {my_var} --> {result}\")\n",
-        "\n",
-        "my_var = [[1,2,3,4,4], [1,2,3,4,4]] #list of list\n",
-        "result = cj.common.remove_duplicate_items(my_var)\n",
-        "print(f\"list of list: {my_var} --> {result}\")\n",
-        "\n",
-        "my_var = [['hi'], ['hi'], ['ih']]\n",
-        "result = cj.common.remove_duplicate_items(my_var)\n",
-        "print(f\"other example: {my_var} --> {result}\")"
+        "# Other examples\n",
+        "result = cj.common.group_items_in_batches(items=['a','b','c','d'], items_per_batch=2)\n",
+        "print(f\"Other examples: {result}\")"
       ],
-      "execution_count": 7,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "simple list: [1, 2, 3, 4, 4] --> [1, 2, 3, 4]\n",
-            "list of list: [[1, 2, 3, 4, 4], [1, 2, 3, 4, 4]] --> [[1, 2, 3, 4, 4]]\n",
+            "Other examples: [['a', 'b'], ['c', 'd']]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y7fcQ6WPuGkn",
+        "colab_type": "text"
+      },
+      "source": [
+        "###remove_duplicate_items\n",
+        "remove duplicates items in an item list or duplicate items list of list"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M9lJN5t8AMvs",
+        "colab_type": "code",
+        "outputId": "2866f986-fb96-44ee-ca55-cb72b77c7147",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "#simple list\n",
+        "my_var = [1,2,3,4,4]\n",
+        "result = cj.common.remove_duplicate_items(my_var)\n",
+        "print(f\"simple list: {my_var} --> {result}\")"
+      ],
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "simple list: [1, 2, 3, 4, 4] --> [1, 2, 3, 4]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KUVj-_W0uXxa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0b45918b-a78c-4ded-df6f-3cef022d8571"
+      },
+      "source": [
+        "#list of list\n",
+        "my_var = [[1,2,3,4,4], [1,2,3,4,4]]\n",
+        "result = cj.common.remove_duplicate_items(my_var)\n",
+        "print(f\"list of list: {my_var} --> {result}\")"
+      ],
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "list of list: [[1, 2, 3, 4, 4], [1, 2, 3, 4, 4]] --> [[1, 2, 3, 4, 4]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vBPxDdzfujKO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0f05eb06-8d13-41a0-e97a-132662d9ba58"
+      },
+      "source": [
+        "# other example\n",
+        "my_var = [['hi'], ['hi'], ['ih']]\n",
+        "result = cj.common.remove_duplicate_items(my_var)\n",
+        "print(f\"other example: {my_var} --> {result}\")"
+      ],
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
             "other example: [['hi'], ['hi'], ['ih']] --> [['hi'], ['ih']]\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pzo5oUytvnsG",
+        "colab_type": "text"
+      },
+      "source": [
+        "###Freq Class\n",
+        "Enumerates the amount of identical intens generating a dictionary of frequencies. Where KEY is item - the original list's item -  and VALUE is the total amount."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qOn877TQxhKW",
+        "colab_type": "text"
+      },
+      "source": [
+        "####instance of Freq"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cNO-l7MKvlRG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f450c2eb-e132-432f-ed37-2c0b24eb0323"
+      },
+      "source": [
+        "# Instance\n",
+        "freq = cj.common.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
+        "print(freq)"
+      ],
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{3: 3, 5: 2, 6: 2, 7: 2, 1: 1, 2: 1, 4: 1, 12: 1, 31: 1, 123: 1}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ddCDXmX0xmzD",
+        "colab_type": "text"
+      },
+      "source": [
+        "####most_freq"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MasIEXjPyD7P",
+        "colab_type": "text"
+      },
+      "source": [
+        "returns the most frequent items from the list, the maximum number of items must be entered."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Sp3jZx3KxYXO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5ace4cee-483e-45b1-9ea3-a54092020183"
+      },
+      "source": [
+        "freq = cj.common.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
+        "freq.most_freq(4)"
+      ],
+      "execution_count": 124,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{3: 3, 5: 2, 6: 2, 7: 2}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 124
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aErkzjfoyUgj",
+        "colab_type": "text"
+      },
+      "source": [
+        "####least_freq\n",
+        "When returning the least frequent items from the list, the maximum number of items must be entered."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aVkXduKezIYs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -219,31 +455,41 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5_RAxSJru0ZV",
+        "colab_type": "text"
+      },
+      "source": [
+        "###time_exec\n",
+        "used to signal or perform a particular function."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "8faV1ZV9BN1w",
         "colab_type": "code",
-        "outputId": "6955b672-7423-41c0-9a58-665940f1c68e",
+        "outputId": "7c7077d2-5191-44ef-9a14-0a9dfc5c4fe4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
         }
       },
       "source": [
-        "# time_exec decorator used to signal or perform a particular function.\n",
         "@cj.decorators.time_exec\n",
         "def my_function(my_param): # Change-me\n",
         "    print(my_param)\n",
         "\n",
         "my_function(\"Hi Cereja\")"
       ],
-      "execution_count": 8,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Hi Cereja\n",
-            "[my_function] performed 0.0018551349639892578\n"
+            "[my_function] performed 0.0011606216430664062\n"
           ],
           "name": "stdout"
         }
@@ -260,11 +506,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UtBVEmZAvFA8",
+        "colab_type": "text"
+      },
+      "source": [
+        "###group_path_from_dir \n",
+        "returns data tuples based on the number of items entered for each tuple,\n",
+        "follows the default order if no sort function is sent"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "qxpaAczOCxCn",
         "colab_type": "code",
-        "outputId": "56d94eaa-90b4-4a04-da4b-c8c5d81858a4",
+        "outputId": "c751b6c4-374f-4770-b892-df7b7b3570ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -273,16 +531,14 @@
       "source": [
         "\"\"\"\n",
         "group_path_from_dir function ...\n",
-        "returns data tuples based on the number of items entered for each tuple,\n",
-        "follows the default order if no sort function is sent\n",
-        "\"\"\"\n",
         "\n",
+        "\"\"\"\n",
         "my_dir = '/content/sample_data'\n",
         "my_ext_file = '.csv'\n",
         "\n",
         "cj.path.group_path_from_dir(dir_path=my_dir, num_items_on_tuple=2, ext_file=my_ext_file)"
       ],
-      "execution_count": 9,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,8 +553,18 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 121
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ckTiv8_kvQAA",
+        "colab_type": "text"
+      },
+      "source": [
+        "###file_name"
       ]
     },
     {
@@ -306,7 +572,7 @@
       "metadata": {
         "id": "qgiqJp8vEU-r",
         "colab_type": "code",
-        "outputId": "ac99678d-8da4-4645-ec8d-d515ac42f3b0",
+        "outputId": "73a30ca8-92d9-4d58-c2de-52622c307dc5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -321,7 +587,7 @@
         "result = cj.path.file_name(file_path=my_file_path, with_ext=True)\n",
         "print(f\"file_path: {my_file_path} --> {result}\")"
       ],
-      "execution_count": 10,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
