--- a/docs/cereja_example.ipynb
+++ b/docs/cereja_example.ipynb
@@ -40,24 +40,24 @@
       "metadata": {
         "id": "B1qNEuxZwVs_",
         "colab_type": "code",
-        "outputId": "480dee03-d555-4a60-f642-58ca50461b5b",
+        "outputId": "f0a6bb02-9f72-415c-81a1-127be29a09fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 106
         }
       },
       "source": [
         "!pip install cereja"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting cereja\n",
-            "  Downloading https://files.pythonhosted.org/packages/6f/b5/3aab34c98ec1d5886d9a28ddbe5f307ebc393eec1986fba5f4685c3aaace/cereja-0.1.9-py3-none-any.whl\n",
+            "  Downloading https://files.pythonhosted.org/packages/26/62/c14c775e4a5da825843f006fcb18ac405e5d593a25bae1331af6f76cc37e/cereja-0.2.1-py3-none-any.whl\n",
             "Installing collected packages: cereja\n",
-            "Successfully installed cereja-0.1.9\n"
+            "Successfully installed cereja-0.2.1\n"
           ],
           "name": "stdout"
         }
@@ -94,6 +94,49 @@
       },
       "source": [
         "##Commons"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "m1TiLkBgSTO7",
+        "colab_type": "text"
+      },
+      "source": [
+        "###theta_angle\n",
+        "Calculates and returns theta angle between two vectors"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3XT2RPm-Scwj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a5bd550f-9382-43a4-a8ac-f1a26c56fe9c"
+      },
+      "source": [
+        "u = (747,981)\n",
+        "v = (41, 426)\n",
+        "cj.common.theta_angle(u, v)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "31.790657496433635"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
       ]
     },
     {
@@ -171,11 +214,11 @@
       "metadata": {
         "id": "YWvTGuECtwHj",
         "colab_type": "code",
+        "outputId": "6021f208-b338-443b-b01c-502ce179c708",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6021f208-b338-443b-b01c-502ce179c708"
+        }
       },
       "source": [
         "\"\"\"\n",
@@ -188,7 +231,7 @@
         "result = cj.common.group_items_in_batches(items=my_var, items_per_batch=3, fill=\"cereja\")\n",
         "print(f\"fill values: {result}\")"
       ],
-      "execution_count": 116,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,18 +247,18 @@
       "metadata": {
         "id": "PPVLm9VNt3wj",
         "colab_type": "code",
+        "outputId": "39dfa1b2-8077-4558-954f-8c37a3e5122a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "39dfa1b2-8077-4558-954f-8c37a3e5122a"
+        }
       },
       "source": [
         "# Other examples\n",
         "result = cj.common.group_items_in_batches(items=['a','b','c','d'], items_per_batch=2)\n",
         "print(f\"Other examples: {result}\")"
       ],
-      "execution_count": 114,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +297,7 @@
         "result = cj.common.remove_duplicate_items(my_var)\n",
         "print(f\"simple list: {my_var} --> {result}\")"
       ],
-      "execution_count": 117,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,11 +313,11 @@
       "metadata": {
         "id": "KUVj-_W0uXxa",
         "colab_type": "code",
+        "outputId": "0b45918b-a78c-4ded-df6f-3cef022d8571",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0b45918b-a78c-4ded-df6f-3cef022d8571"
+        }
       },
       "source": [
         "#list of list\n",
@@ -282,7 +325,7 @@
         "result = cj.common.remove_duplicate_items(my_var)\n",
         "print(f\"list of list: {my_var} --> {result}\")"
       ],
-      "execution_count": 118,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,11 +341,11 @@
       "metadata": {
         "id": "vBPxDdzfujKO",
         "colab_type": "code",
+        "outputId": "0f05eb06-8d13-41a0-e97a-132662d9ba58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0f05eb06-8d13-41a0-e97a-132662d9ba58"
+        }
       },
       "source": [
         "# other example\n",
@@ -310,7 +353,7 @@
         "result = cj.common.remove_duplicate_items(my_var)\n",
         "print(f\"other example: {my_var} --> {result}\")"
       ],
-      "execution_count": 119,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,18 +390,18 @@
       "metadata": {
         "id": "cNO-l7MKvlRG",
         "colab_type": "code",
+        "outputId": "f450c2eb-e132-432f-ed37-2c0b24eb0323",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f450c2eb-e132-432f-ed37-2c0b24eb0323"
+        }
       },
       "source": [
         "# Instance\n",
         "freq = cj.common.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
         "print(freq)"
       ],
-      "execution_count": 123,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,17 +437,17 @@
       "metadata": {
         "id": "Sp3jZx3KxYXO",
         "colab_type": "code",
+        "outputId": "5ace4cee-483e-45b1-9ea3-a54092020183",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5ace4cee-483e-45b1-9ea3-a54092020183"
+        }
       },
       "source": [
         "freq = cj.common.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
         "freq.most_freq(4)"
       ],
-      "execution_count": 124,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -483,7 +526,7 @@
         "\n",
         "my_function(\"Hi Cereja\")"
       ],
-      "execution_count": 120,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,7 +581,7 @@
         "\n",
         "cj.path.group_path_from_dir(dir_path=my_dir, num_items_on_tuple=2, ext_file=my_ext_file)"
       ],
-      "execution_count": 121,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +630,7 @@
         "result = cj.path.file_name(file_path=my_file_path, with_ext=True)\n",
         "print(f\"file_path: {my_file_path} --> {result}\")"
       ],
-      "execution_count": 122,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
